Mostly updates, typings and optimizations to the build process
